# receptus

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  pkg-check.yml  publish.yml  security.yml  typecheck.yml
_wheel/receptus-0.1.3.dist-info/: METADATA
examples/: example.py
receptus/: __init__.py
src/receptus/: __init__.py  receptus.py
tests/: test_ansi_and_formatting.py  test_attempts_banner.py  test_callable_options_and_format_return.py  test_confirm_and_get_input.py  test_default_and_attempts.py  test_free_text_and_prompt.py  test_fuzzing_onEvent.py  test_history_and_autocomplete.py  test_imports.py  test_module_reload_colorama.py  test_multi_single_select.py  test_quit_help.py  test_timed_and_read_input.py
