[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "receptus"
version = "0.1.4"
authors = [
  { name="James Husted", email="james@husted.dev" },
]
description = "A flexible, interactive command-line prompt toolkit for Python."
readme = "README.md"
license = "MIT"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Terminals",
]
dependencies = [
    "colorama",
    'inputimeout; sys_platform == "win32"', # For timed input on Windows
]

[project.urls]
Homepage = "https://github.com/HusteDev/receptus"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["receptus"]

[tool.pytest.ini_options]
addopts = "--cov=receptus --cov-report=term-missing --cov-report=xml"
testpaths = ["tests"]
# if you don't use editable install:
# pythonpath = ["src"]

[tool.coverage.run]
branch = true
source = ["receptus"]

[tool.coverage.report]
fail_under = 85
exclude_lines = [
  "pragma: no cover",
  "if __name__ == .__main__.:",
]